hphp/test/zend/good/Zend/tests/errmsg_035.php.expectf

Fatal error: A type specifier is expected here. in %s/errmsg_035.php on line 3
